--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Home</title>
+    <script type="module" src="./js/index.js" defer></script>
   </head>
   <body>
     <h1 class="italic">YEYYYYY</h1>
@@ -22,6 +23,6 @@
 
 
 
-    <script type="module" src="/main.js"></script>
+
   </body>
 </html>
