--- a/login.html
+++ b/login.html
@@ -2,29 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./img/socialapi_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log In</title>
+    <title>Welcome: Log In to SocialAPI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"> 
+
     <script type="module" src="./js/login.js" defer></script>
   </head>
-  <body>
-    <h1 class="text-center text-xl pb-20 font-bold">Log in</h1>
+  <body class="bg-mainBeige">
+
+
+    <main class="py-14 md:py-20">
+
+    <h1 class="pb-12 md:pb-20 flex flex-col items-center gap-4 font-josefine text-md font-light">
+      <img class="w-40" src="./img/socialapi_logo.svg">
+      - Where talented developers meet -
+    </h1>
+
+
+    <section class="flex flex-col justify-evenly items-center gap-20 md:gap-32 lg:flex-row">
+      <form id="login-form" class="flex flex-col w-60 md:w-72 gap-4 md:gap-6 text-center font-robotoC font-light">
+        <label class="uppercase pb-4 text-xl" for="form">Log in</label>
+        <label for="email">Email</label>
+          <input type="text" name="email" id="email" class="bg-mainBeige border-b border-b-gray-400 focus:outline-none h-8 px-2">
+          <span id="email-message"></span>
+        <label for="password">Password</label>
+          <input type="password" name="password" id="password" class="bg-mainBeige border-b border-b-gray-400 focus:outline-none h-8 px-2">
+          <span id="password-message"></span>
+
+          <button class="my-2 bg-white py-2 px-6 shadow-lg w-fit m-auto rounded-lg font-josefine" id="submitform" type="submit">Let's go</button>
+      </form>
+
+      <div class="flex flex-col items-center w-60 font-robotoC font-light text-lg">
+        <p>Don't have an account yet?</p>
+        <p class="py-2">Let's get you one in no time!</p>
+        <button id="signUpButton" class=" py-2 px-10 mt-8 rounded-md border border-black shadow-md">Sign Up</button>
+      </div>
+    </section>
 
 
 
-    <form id="login-form" class="flex flex-col w-80 gap-4 m-auto text-center bg-gray-200 p-8">
-      <label for="email">Email</label>
-        <input type="text" name="email" id="email" class="border-blue-200 border-2">
-        <span id="email-message"></span>
-      <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="border-blue-200 border-2">
-        <span id="password-message"></span>
-
-        <button class="bg-red-500 p-4 rounded-lg" id="submitform" type="submit">Submit</button>
-    </form>
-
-
-
-
+  </main>
   </body>
 </html>
