--- a/myprofile.html
+++ b/myprofile.html
@@ -3,29 +3,93 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My page</title>
+
+    <script type="module" src="./js/utils/header.js" defer></script>
     <script type="module" src="./js/myprofile.js" defer></script>
+    
+
   </head>
-  <body>
-    <h1 class="text-2xl font-bold text-center p-20">My page</h1>
+    <body>
 
-    <section id="my-posts" class="w-fit m-auto">
-        <h2 class="pb-8 text-2xl font-bold">My posts</h2>
-    </section>
+    <header class="p-12 bg-mainBeige">
+      <nav id="nav" class="flex flex-row justify-between items-center"></nav>
+    </header>
 
-    <section id="edit-section" class="hidden">
-        <form id="edit-form" class="bg-purple-100 p-10 flex flex-col w-2/4 m-auto gap-4">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title" required class="border-gray-500 border-2">
-            <label for="content">Content</label>
-            <textarea name="body" id="body" class="border-gray-500 border-2"></textarea>
-            <button id="submit-change-button" class="bg-green-400 px-8 py-4 w-fit rounded-md m-auto">Ok</button>
-        </form>
-    `
-    </section>
+    <main class="bg-mainBeige px-24">
+
+      <section class="flex flex-row justify-between items-center">
+        <section class="w-1/2">
+          <form id="create-post" class="bg-white p-10 flex flex-row w-full justify-between gap-8 rounded-md shadow-md">
+            <div class="flex flex-col gap-6 w-full">
+              <input type="text" name="title" id="title" placeholder="TITLE" required class="border-none font-robotoC font-light placeholder:text-black text-2xl focus:outline-none">
+              <textarea name="body" id="body" placeholder="What is on your mind?" class="h-full border-none font-josefine font-light placeholder:text-black focus:outline-none"></textarea>
+            </div>
+          <div class="flex flex-col items-end font-josefine font-light gap-2">
+            <label for="tags">Add Tags</label>
+            <input type="text" name="tags" id="tags" class="bg-mainBeige rounded-md w-24 h-6"> 
+            <label for="media">Add Media</label>
+            <input id="media-button" class="bg-mainBeige p-2 rounded-md w-24 h-6">
+            <button id="submit" class="bg-orange-200 px-8 py-2 w-fit rounded-md shadow-md mt-6">Post</button>
+          </div>
+          </form>
+        </section>
+
+        <section>
+          <div id="usersData"></div>
+          <div class="text-center">
+              <button class="bg-white font-josefine font-light py-2 px-4 rounded-md shadow-md" id="settingsButton">Settings</button>
+          </div>
+          <div class="text-center my-6">
+            <button class="bg-amber-800 text-white font-josefine font-light py-2 px-4 rounded-md shadow-md text-sm" id="logOutButton">Log Out</button>
+        </div>
+        </section>
+      </section>
+  
 
 
+      
 
+      <h2 class="py-12 text-2xl font-light font-robotoC">My posts</h2>
+        <section id="my-posts" class="flex flex-wrap gap-8 justify-evenly z-0"></section>
+
+        <section id="edit-section" class="hidden w-screen h-screen bg-amber-900 bg-opacity-30 fixed z-20 left-0 top-0">
+            <form id="edit-form" class="bg-white p-10 flex flex-col w-2/4 gap-4 z-50 fixed left-1/4 top-1/4">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="edit-title" required class="border-gray-500 border-2">
+                <label for="content">Content</label>
+                <textarea name="body" id="edit-body" class="border-gray-500 border-2"></textarea>
+                <label for="tags">Tags</label>
+                <input type="text" name="tags" id="tagsEDIT" class="bg-mainBeige rounded-md w-24 h-6"> 
+                <label for="media">Media</label>
+                <input id="mediaEDIT" class="bg-mainBeige p-2 rounded-md w-24 h-6">
+                <button id="submit-change-button" class="bg-green-400 px-8 py-4 w-fit rounded-md m-auto">Ok</button>
+            </form>
+        </section>
+
+        <section id="edit-profile-media" class="hidden right-20 w-full h-full bg-amber-900 bg-opacity-30 fixed z-20 left-0 top-0 cursor-pointer">
+          <form id="edit-media-form" class="modal font-josefine font-light bg-mainBeige p-10 flex flex-col w-1/2 gap-4 z-50 fixed items-end right-1/4 top-1/4">
+            <label for="changeAvatar" class="text-right">Change Avatar</label>
+              <div class="flex flex-row gap-4 items-center justify-end w-full">
+                <figure id="avatarIMG" class="h-28 w-28"></figure>
+                <input type="text" name="changeAvatar" id="change-avatar" class="py-2 px-4 w-2/3 h-fit text-sm"> 
+              </div>
+              <label for="changeBanner" class="text-right">Change Banner</label>
+              <div class="flex flex-row gap-4 items-center justify-end w-full">
+                <span id="bannerIMG" class="w-28 h-28"></span>
+                <input type="text" name="changeBanner" id="change-banner" class="py-2 px-4 w-2/3 h-fit text-sm">
+              </div>
+              <button type="submit" class="bg-white font-josefine font-light py-2 px-4 rounded-md shadow-md my-4 w-fit">Change</button>
+          </form>
+        </section>
+
+
+   
+
+  </main>
   </body>
 </html>
