--- a/post.html
+++ b/post.html
@@ -8,13 +8,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"> 
     <title>Single post (get id here)</title>
-    <script type="module" src="./js/utils/components.js" defer></script>
+    
+    <script type="module" src="./js/utils/header.js" defer></script>
     <script type="module" src="./js/post.js" defer></script>
 
   </head>
   <body>
-    <header class="p-12 bg-mainBeige">
-      <nav id="nav" class="flex flex-row justify-between items-center"></nav>
+    <header class="h-80 p-8 bg-mainBackgroundHeader bg-center shadow-lg flex flex-row justify-between items-center text-white">
+
+      <img class="w-32" src="./img/logo_white.svg" alt="">
+      <input type="text" name="search" id="search" placeholder="search" class="w-1/3 border px-4 h-14 text-xl border-white bg-transparent focus:outline-none focus:scale-110 duration-200 ease-in-out transition-all">
+
+      <div class="">
+        <section id="usersData" class="relative hidden lg:inline-block">
+        </section>
+      </div>
+
     </header>
     
     <main>
@@ -24,10 +33,6 @@
       <section id="single-post" class="w-fit m-auto"></section>
 
     </main>
-
-   
-
-
 
   </body>
 </html>
