--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,17 @@
 
   </head>
   <body>
-    <header class="p-12 bg-mainBeige">
-      <nav id="nav" class="flex flex-row justify-between items-center"></nav>
-    </header>
+    <header class="h-80 p-8 bg-mainBackgroundHeader bg-center shadow-lg flex flex-row justify-between items-center text-white">
+
+        <img class="w-32" src="./img/logo_white.svg" alt="">
+        <input type="text" name="search" id="search" placeholder="search" class="w-1/3 border px-4 h-14 text-xl border-white bg-transparent focus:outline-none focus:scale-110 duration-200 ease-in-out transition-all">
+  
+        <div class="">
+          <section id="usersData" class="relative hidden lg:inline-block">
+          </section>
+        </div>
+  
+      </header>
     
     <main class="mx-40">
 
