log in & signup OK

--- a/myprofile.html
+++ b/myprofile.html
@@ -10,7 +10,7 @@
     <title>My page</title>
 
   
-    <script type="module" src="./js/header.js" defer></script>
+    <script type="module" src="./js/utils/header.js" defer></script>
     <script type="module" src="./js/myprofile.js" defer></script>
     
 
