--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     
-    <main class="py-12">
+    <main>
       <section id="single-post" class="w-1/2 m-auto border-r border-l border-mainBeige py-16"></section>
 
     </main>
