--- a/myprofile.html
+++ b/myprofile.html
@@ -3,95 +3,171 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./img/socialapi_logo.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My page</title>
 
-  
     <script type="module" src="./js/utils/header.js" defer></script>
     <script type="module" src="./js/myprofile.js" defer></script>
-    
-
   </head>
-    <body>
+  <body>
+    <header
+      class="h-80 p-8 bg-mainBackgroundHeader bg-center flex flex-row justify-between items-center text-white font-lato font-light">
+      <a class="self-start" href="index.html"
+        ><img class="w-32" src="./img/logo_white.svg" alt=""
+      /></a>
+      <input
+        type="text"
+        name="search"
+        id="search"
+        placeholder="search"
+        class="w-1/3 border px-4 h-12 text-md border-white bg-transparent focus:outline-none focus:scale-105 duration-200 ease-in-out transition-all" />
 
-      <header class="h-80 p-8 bg-mainBackgroundHeader bg-center flex flex-row justify-between items-center text-white font-lato font-light">
-
-        <a class="self-start" href="index.html"><img class="w-32 " src="./img/logo_white.svg" alt=""></a>
-        <input type="text" name="search" id="search" placeholder="search" class="w-1/3 border px-4 h-12 text-md border-white bg-transparent focus:outline-none focus:scale-105 duration-200 ease-in-out transition-all">
-  
-        <div>
-          <section id="usersData" class="relative hidden lg:inline-block border border-transparent rounded-md hover:border-mainBeige"></section>
-          <div class="mt-8 flex items-center justify-center gap-4">
-              <button class="bg-white p-1 rounded-md shadow-md" id="settingsButton"><img class="w-8" src="./img/settings.svg" alt="Settings icon"></button>
-            <button class="bg-white p-2 rounded-md shadow-md" id="logOutButton"><img class="w-6" src="./img/log-out.png" alt=""></button>
-          </div>
+      <div>
+        <section
+          id="usersData"
+          class="relative hidden lg:inline-block border border-transparent rounded-md hover:border-mainBeige"></section>
+        <div class="mt-8 flex items-center justify-center gap-4">
+          <button class="bg-white p-1 rounded-md shadow-md" id="settingsButton">
+            <img class="w-8" src="./img/settings.svg" alt="Settings icon" />
+          </button>
+          <button class="bg-white p-2 rounded-md shadow-md" id="logOutButton">
+            <img class="w-6" src="./img/log-out.png" alt="" />
+          </button>
         </div>
-  
-      </header>
+      </div>
+    </header>
 
     <main class="bg-mainBeige flex flex-col items-center pb-12">
-
       <section class="w-full bg-lightBrown py-16">
         <section class="w-1/2 m-auto">
-          <form id="create-post" class="bg-white p-10 flex flex-row w-full justify-between gap-8 rounded-md shadow-md">
+          <form
+            id="create-post"
+            class="bg-white p-10 flex flex-row w-full justify-between gap-8 rounded-md shadow-md">
             <div class="flex flex-col w-full gap-4">
-              <input type="text" name="title" id="title" placeholder="TITLE" required class="border-none font-robotoC font-light placeholder:text-black text-2xl focus:outline-none">
-              <textarea name="body" id="body" placeholder="What is on your mind?" class="auto-rows-max auto-cols-auto w-full h-full border-none font-josefine font-light placeholder:text-black focus:outline-none"></textarea>
+              <input
+                type="text"
+                name="title"
+                id="title"
+                placeholder="TITLE"
+                required
+                class="border-none font-robotoC font-light placeholder:text-black text-2xl focus:outline-none" />
+              <textarea
+                name="body"
+                id="body"
+                placeholder="What is on your mind?"
+                class="auto-rows-max auto-cols-auto w-full h-full border-none font-josefine font-light placeholder:text-black focus:outline-none"></textarea>
             </div>
-          <div class="flex flex-col items-end justify-end font-josefine font-light gap-2">
-            <input type="text" placeholder="Add Tags" name="tags" id="tags" class="text-right w-16"> 
-            <input id="media-button" placeholder="Add Media" class="text-right w-20">
-            <button id="submit" class="bg-lightBrown text-white font-normal tracking-wide leading-5 text-xs px-8 py-2 w-fit rounded-md shadow-md mt-12 uppercase">Post</button>
-          </div>
+            <div
+              class="flex flex-col items-end justify-end font-josefine font-light gap-2">
+              <input
+                type="text"
+                placeholder="Add Tags"
+                name="tags"
+                id="tags"
+                class="text-right w-16" />
+              <input
+                id="media-button"
+                placeholder="Add Media"
+                class="text-right w-20" />
+              <button
+                id="submit"
+                class="bg-lightBrown text-white font-normal tracking-wide leading-5 text-xs px-8 py-2 w-fit rounded-md shadow-md mt-12 uppercase">
+                Post
+              </button>
+            </div>
           </form>
         </section>
       </section>
-  
 
+      <h2
+        class="py-16 text-4xl font-bold flex flex-col justify-center items-center gap-6 w-full font-lato tracking-wide">
+        My posts
+      </h2>
 
-      
+      <section
+        id="my-posts"
+        class="flex flex-wrap gap-8 justify-center w-1/2"></section>
 
-      <h2 class="py-16 text-4xl font-bold flex flex-col justify-center items-center gap-6 w-full font-lato tracking-wide">My posts</h2>
+      <section
+        id="edit-section"
+        class="hidden w-full h-full bg-lightBrown bg-opacity-90 fixed z-20 left-0 top-0">
+        <button
+          id="exitButton"
+          class="absolute top-20 left-52 py-2 px-4 bg-white rounded-md font-bold text-xl">
+          X
+        </button>
+        <form
+          id="edit-form"
+          class="ting bg-white p-10 flex flex-col w-2/4 gap-6 z-50 fixed left-1/4 bottom-1/4 font-lato font-light rounded-md shadow-lg">
+          <input
+            type="text"
+            name="title"
+            id="edit-title"
+            required
+            class="border border-mainBeige shadow-md rounded-md text-xl focus:outline-none p-4" />
+          <textarea
+            name="body"
+            id="edit-body"
+            required
+            class="border border-mainBeige shadow-md rounded-md text-md focus:outline-none p-4"></textarea>
+          <label class="text-lg pb-4" for="tags"
+            >Tags
+            <input
+              type="text"
+              name="tags"
+              id="tagsEDIT"
+              class="border border-mainBeige shadow-md rounded-md w-full px-2 h-10" />
+          </label>
+          <label class="text-lg pb-4" for="media"
+            >Media
+            <input
+              id="mediaEDIT"
+              class="border border-mainBeige shadow-md rounded-md w-full h-10 px-4" />
+          </label>
+          <button
+            id="submit-change-button"
+            class="bg-lightBrown px-8 py-2 w-fit text-white shadow-md rounded-md m-auto">
+            Ok
+          </button>
+        </form>
+      </section>
 
-        <section id="my-posts" class="flex flex-wrap gap-8 justify-center w-1/2"></section>
-
-        <section id="edit-section" class="hidden w-full h-full bg-lightBrown bg-opacity-90 fixed z-20 left-0 top-0">
-          <button id="exitButton" class="absolute top-20 left-52 py-2 px-4 bg-white rounded-md font-bold text-xl">X</button>
-            <form id="edit-form" class="ting bg-white p-10 flex flex-col w-2/4 gap-6 z-50 fixed left-1/4 bottom-1/4 font-lato font-light rounded-md shadow-lg">
-                <input type="text" name="title" id="edit-title" required class="border border-mainBeige shadow-md rounded-md text-xl focus:outline-none p-4">
-                <textarea name="body" id="edit-body" required class="border border-mainBeige shadow-md rounded-md text-md focus:outline-none p-4"></textarea>
-                <label class="text-lg pb-4" for="tags">Tags
-                <input type="text" name="tags" id="tagsEDIT" class="border border-mainBeige shadow-md rounded-md w-full px-2 h-10"> 
-              </label>
-                <label class="text-lg pb-4" for="media">Media
-                  <input id="mediaEDIT" class="border border-mainBeige shadow-md rounded-md w-full h-10 px-4">
-              </label>
-                <button id="submit-change-button" class="bg-lightBrown px-8 py-2 w-fit text-white shadow-md rounded-md m-auto">Ok</button>
-            </form>
-        </section>
-
-        <section id="edit-profile-media" class="hidden right-20 w-full h-full bg-lightBrown bg-opacity-80 fixed z-20 left-0 top-0 cursor-pointer">
-          <form id="edit-media-form" class="modal font-josefine font-light bg-mainBeige p-10 flex flex-col w-1/2 gap-4 z-50 fixed items-end right-1/4 top-1/4">
-            <label for="changeAvatar" class="text-right">Change Avatar</label>
-              <div class="flex flex-row gap-4 items-center justify-end w-full">
-                <figure id="avatarIMG" class="h-28 w-28"></figure>
-                <input type="text" name="changeAvatar" id="change-avatar" class="py-2 px-4 w-2/3 h-fit text-sm"> 
-              </div>
-              <label for="changeBanner" class="text-right">Change Banner</label>
-              <div class="flex flex-row gap-4 items-center justify-end w-full">
-                <span id="bannerIMG" class="w-28 h-28"></span>
-                <input type="text" name="changeBanner" id="change-banner" class="py-2 px-4 w-2/3 h-fit text-sm">
-              </div>
-              <button type="submit" class="bg-white font-josefine font-light py-2 px-4 rounded-md shadow-md my-4 w-fit">Change</button>
-          </form>
-        </section>
-
-
-   
-
-  </main>
+      <section
+        id="edit-profile-media"
+        class="hidden right-20 w-full h-full bg-lightBrown bg-opacity-80 fixed z-20 left-0 top-0 cursor-pointer">
+        <form
+          id="edit-media-form"
+          class="modal font-josefine font-light bg-mainBeige p-10 flex flex-col w-1/2 gap-4 z-50 fixed items-end right-1/4 top-1/4">
+          <label for="changeAvatar" class="text-right">Change Avatar</label>
+          <div class="flex flex-row gap-4 items-center justify-end w-full">
+            <figure id="avatarIMG" class="h-28 w-28"></figure>
+            <input
+              type="text"
+              name="changeAvatar"
+              id="change-avatar"
+              class="py-2 px-4 w-2/3 h-fit text-sm" />
+          </div>
+          <label for="changeBanner" class="text-right">Change Banner</label>
+          <div class="flex flex-row gap-4 items-center justify-end w-full">
+            <span id="bannerIMG" class="w-28 h-28"></span>
+            <input
+              type="text"
+              name="changeBanner"
+              id="change-banner"
+              class="py-2 px-4 w-2/3 h-fit text-sm" />
+          </div>
+          <button
+            type="submit"
+            class="bg-white font-josefine font-light py-2 px-4 rounded-md shadow-md my-4 w-fit">
+            Change
+          </button>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
