--- a/profile.html
+++ b/profile.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./img/socialapi_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Single profile</title>
     <script type="module" src="./js/utils/header.js" defer></script>
     <script type="module" src="./js/profile.js" defer></script>
   </head>
   <body>
-    <header class="h-80 p-8 bg-mainBackgroundHeader bg-center shadow-lg flex flex-row justify-between items-center text-white">
-      <a class="self-start" href="index.html"><img class="w-32 " src="./img/logo_white.svg" alt="Logo"></a>     
-      <input type="text" name="search" id="search" placeholder="..search" class="text-white font-light placeholder:text-white tracking-wider font-lato w-1/3 border rounded-md px-4 h-12 text-md border-white bg-transparent focus:outline-none">
+    <header
+      class="h-80 p-8 bg-mainBackgroundHeader bg-center shadow-lg flex flex-row justify-between items-center text-white">
+      <a class="self-start" href="index.html"
+        ><img class="w-32" src="./img/logo_white.svg" alt="Logo"
+      /></a>
+      <input
+        type="text"
+        name="search"
+        id="search"
+        placeholder="..search"
+        class="text-white font-light placeholder:text-white tracking-wider font-lato w-1/3 border rounded-md px-4 h-12 text-md border-white bg-transparent focus:outline-none" />
       <div>
-        <div id="usersData" class="relative hidden lg:inline-block border border-transparent rounded-md hover:border-mainBeige">
-        </div>
+        <div
+          id="usersData"
+          class="relative hidden lg:inline-block border border-transparent rounded-md hover:border-mainBeige"></div>
         <div class="text-center">
-          <button class="bg-white p-2 mt-4 rounded-md shadow-md text-sm" id="logOutButton"><img class="w-5" src="./img/log-out.png" alt=""></button>
+          <button
+            class="bg-white p-2 mt-4 rounded-md shadow-md text-sm"
+            id="logOutButton">
+            <img class="w-5" src="./img/log-out.png" alt="" />
+          </button>
         </div>
       </div>
     </header>
     <main class="mx-40 py-12">
       <section id="single-profile" class="w-fit m-auto mb-6"></section>
       <h2 class="pb-12 text-2xl font-josefine">Posts</h2>
-      <section id="single-profile-posts" class="flex flex-wrap gap-2 w-full justify-between"></section>
+      <section
+        id="single-profile-posts"
+        class="flex flex-wrap gap-2 w-full justify-between"></section>
     </main>
   </body>
 </html>
