--- a/signup.html
+++ b/signup.html
@@ -3,47 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./img/socialapi_logo.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up to SocialAPI</title>
     <script type="module" src="./js/signup.js" defer></script>
   </head>
 
-  <body class="bg-mainBackground bg-cover bg-right bg-no-repeat h-screen md:bg-center">
+  <body
+    class="bg-mainBackground bg-cover bg-right bg-no-repeat h-screen md:bg-center">
     <header class="p-8 mb-12 md:p-14 lg:pb-2">
       <figure class="">
-        <img class="w-24 ml-auto md:w-30" src="./img/logo_white.svg">
+        <img class="w-24 ml-auto md:w-30" src="./img/logo_white.svg" />
       </figure>
     </header>
-    <main class="flex flex-col justify-between gap-16 h-fit md:gap-40 md:pt-14 md:pb-8 lg:pt-0 lg:gap-16">
-      <section class="lg:flex lg:flex-row-reverse lg:justify-center lg:gap-40 lg:items-center">
-        <h1 class="pb-14 md:text-4xl text-center font-lato text-3xl font-light text-white lg:text-6xl">
-       Registrer
+    <main
+      class="flex flex-col justify-between gap-16 h-fit md:gap-40 md:pt-14 md:pb-8 lg:pt-0 lg:gap-16">
+      <section
+        class="lg:flex lg:flex-row-reverse lg:justify-center lg:gap-40 lg:items-center">
+        <h1
+          class="pb-14 md:text-4xl text-center font-lato text-3xl font-light text-white lg:text-6xl">
+          Registrer
         </h1>
-        <form id="sign-up-form" class="bg-darkBrown bg-opacity-80 m-auto shadow-md flex flex-col px-6 py-8 rounded-md gap-10 w-3/4 md:w-1/2 text-center font-lato font-light md:px-8 md:py-12 md:text-md lg:gap-12 text-white text-sm lg:w-1/4 lg:p-8 lg:m-0 lg:bg-opacity-90">
+        <form
+          id="sign-up-form"
+          class="bg-darkBrown bg-opacity-80 m-auto shadow-md flex flex-col px-6 py-8 rounded-md gap-10 w-3/4 md:w-1/2 text-center font-lato font-light md:px-8 md:py-12 md:text-md lg:gap-12 text-white text-sm lg:w-1/4 lg:p-8 lg:m-0 lg:bg-opacity-90">
           <label for="username" class="relative">
-            <input type="text" name="username" id="username" placeholder="Username" class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide">
-            <span class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm" id="username-message"></span>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              placeholder="Username"
+              class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide" />
+            <span
+              class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm"
+              id="username-message"></span>
           </label>
           <label for="email" class="relative">
-            <input type="text" name="email" id="email" placeholder="Email" class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide">
-            <span class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm" id="email-message"></span>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Email"
+              class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide" />
+            <span
+              class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm"
+              id="email-message"></span>
           </label>
           <label for="password" class="relative">
-            <input type="password" name="password" id="password" placeholder="Password" class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide">
-            <span class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm" id="password-message"></span>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Password"
+              class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide" />
+            <span
+              class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm"
+              id="password-message"></span>
           </label>
-            <label for="confirm-password" class="relative">
-            <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm password" class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide">
-            <span class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm" id="confirm-password-message"></span>
+          <label for="confirm-password" class="relative">
+            <input
+              type="password"
+              name="confirm-password"
+              id="confirm-password"
+              placeholder="Confirm password"
+              class="px-4 border-opacity-50 bg-transparent border border-white focus:outline-none h-10 md:h-12 w-full shadow-lg placeholder:text-gray-300 placeholder:tracking-wide" />
+            <span
+              class="absolute text-xs tracking-wide -bottom-6 right-0 whitespace-nowrap lg:text-sm"
+              id="confirm-password-message"></span>
           </label>
-            <button class="w-fit m-auto py-2 px-10 md:mt-2 rounded-md border text-darkBrown bg-white shadow-md" id="sign-up-button" type="submit">Sign Up</button>
-            <span id="error-message" class="hidden"></span>
+          <button
+            class="w-fit m-auto py-2 px-10 md:mt-2 rounded-md border text-darkBrown bg-white shadow-md"
+            id="sign-up-button"
+            type="submit">
+            Sign Up
+          </button>
+          <span id="error-message" class="hidden"></span>
         </form>
       </section>
-      <div class="flex flex-col items-center font-lato text-white font-light md:text-md md:tracking-wide">
+      <div
+        class="flex flex-col items-center font-lato text-white font-light md:text-md md:tracking-wide">
         <p>Got an account after all?</p>
         <a class="underline" href="login.html">Go back to log in</a>
       </div>
